# zsh-git-prompt

./: .gitignore  README.md  build.sh  gitstatus.py  zshrc.sh
cxx/: .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  README.md  build.sh
cxx/src/: gen_const.cc  gstat.cc  gstat.h  lib.cc  lib.h  main.cc
cxx/test/: lib_test.cc  test_gstat.cc
